<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.myapplication.LinearEquationActivity">

    <LinearLayout
        android:layout_width="344dp"
        android:layout_height="495dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="top|center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextL1"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/hint1"
                android:inputType="numberSigned"
                android:textAlignment="center"
                android:textAppearance="@android:style/TextAppearance.Material.Large" />

            <TextView
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/x"
                android:textAlignment="center"
                android:textAppearance="@android:style/TextAppearance.Material.Large" />

            <EditText
                android:id="@+id/editTextL2"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/hint2"
                android:inputType="numberSigned"
                android:textAlignment="center"
                android:textAppearance="@android:style/TextAppearance.Material.Large" />

            <TextView
                android:layout_width="2dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/equals"
                android:textAlignment="center"
                android:textAppearance="@android:style/TextAppearance.Material.Large" />

            <EditText
                android:id="@+id/editTextL3"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/hint3"
                android:inputType="numberSigned"
                android:textAlignment="center"
                android:textAppearance="@android:style/TextAppearance.Material.Large" />
        </LinearLayout>

        <Button
            android:id="@+id/solveL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/solve" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/result"
            android:textAlignment="center"
            android:textAppearance="@android:style/TextAppearance.Material.Medium" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <TextView
            android:id="@+id/res1L"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aaa"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/res2L"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aaa1"
            android:textAlignment="center" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <Button
            android:id="@+id/shareL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
